--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,110 @@
-*{
+/*----------------
+    RESET
+-----------------*/
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-/* ----------
+/*----------------
     COMMON
-  ----------- */
+-----------------*/
 
-.container{
+body {
+    background-color: #b91450;
+}
+
+label{
+    color: #b91450;
+    font-size: large;
+}
+
+input, select{
+    margin-top: .3125rem;
+    border-color: #b91450;
+    border-radius: .3125rem;
+    padding: .3125rem .625rem;
+}
+
+.page-container {
     max-width: 62.5rem;
     margin: auto;
-    background-color: #B91450;
+    padding: 1.25rem;
+}
+
+h1, h2 {
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+h3{
+    margin-bottom: .625rem;
+}
+
+h5{
+    margin-bottom: .9375rem;
+}
+
+.card{
+    max-width: 62.5rem;
+    margin: auto;
+    padding: 1.25rem;
+}
+
+.ticket-form {
+    margin-bottom: 1.875rem;
+    padding: 1.25rem;
+    border-radius: .625rem;
+}
+
+.ticket-form__fields{
+    display: flex;
+    justify-content: space-around;
+}
+
+.ticket-form__buttons{
+    margin-top: 1.25rem;
     text-align: center;
 }
 
-h1{
-    color: #fff;
+.ticket-form, .ticket {
+    background-color: #fff;
+}
+.ticket-container {
+    display: none;
+}
+.ticket-container.show {
+    display: block;
+}
+.ticket__info {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid grey;
+    border-top: 1px solid grey;
+}
+
+.ticket-info-name{
+    background-color: grey;
+    width: 25%;
+}
+
+.ticket{
+    padding: 1.25rem;
+    border-radius: .625rem;
+}
+
+/*----------------
+    BUTTONS
+-----------------*/
+
+.ticket-form__buttons button{
+    padding: .625rem .9375rem;
+    border: .125rem solid grey;
+    border-radius: .3125rem;
+}
+
+#generator{
+    margin-right: .625rem;
 }
